src/main/java/org/example/myproject/error/ErrorCode.java
package org.example.myproject.error;

import org.springframework.web.bind.annotation.RequestMapping;


public class ErrorCode {

}
